# live-viewer

./: package-lock.json  package.json
altwalker2/: README.md  __init__.py  pyproject.toml  requirements.txt  run_online.py  run_server.py
altwalker2/backend/: __init__.py  cli.py  graphwalker_client.py  main.py  python_executor.py  reporter.py  walker.py  websocket_manager.py
altwalker2/frontend/: index.html
altwalker2/frontend/js/: graph.js  main.js  ui.js  websocket.js
example/models/: default.json
example/tests/: test.py
